examples/test/testpolicy9865.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9865
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key14: value41
      key18: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value22
      podSelector:
        matchLabels:
          key24: value19
          key31: value40
          key32: value36
